StringUtil 리팩토링: Stream 랜덤 분기, 3항 연산자, switch expression, Python-style 음수 인덱스, 정규식 trimLeadingZero, repeat(String), split immutable list